--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
-@import url(http://fonts.googleapis.com/css?family=Indie+Flower);
+@import url(//fonts.googleapis.com/css?family=Indie+Flower);
 
 body {
     background-attachment: fixed;
-    background-image: url('images/pattern-58va.png')
+    background-image: url('images/pattern-enmi.png')
 }
 
 #initial > div[background] {
@@ -19,8 +19,10 @@ body {
 }
 
 #logo {
-    width: 100%;
+    width: 100%; 
+    margin-top: 10%;
 }
+
     #logo > * {
     }
 
